--- a/translations/en/LC_MESSAGES/messages.po
+++ b/translations/en/LC_MESSAGES/messages.po
@@ -137,6 +137,10 @@ msgstr "Pediatric radiologist"
 msgid "start.category-select.thoracic-radiologist"
 msgstr "Thoracic radiologist"
 
+msgid "start.category-select.emergency-radio"
+msgstr "Emergency radiologist"
+
+
 msgid "start.category-select.radiology-resident"
 msgstr "Radiology resident"
 
@@ -154,6 +158,7 @@ msgstr "Internal medicine physician"
 
 msgid "start.category-select.emergency-physician"
 msgstr "Emergency physician"
+
 
 msgid "start.category-select.intensive-physician"
 msgstr "Intensive care physician"
