--- a/translations/en/LC_MESSAGES/messages.po
+++ b/translations/en/LC_MESSAGES/messages.po
@@ -137,7 +137,7 @@ msgstr "Pediatric radiologist"
 msgid "start.category-select.thoracic-radiologist"
 msgstr "Thoracic radiologist"
 
-msgid "start.category-select.emergency-radio"
+msgid "start.category-select.emergency-radiologist"
 msgstr "Emergency radiologist"
 
 
