--- a/translations/en/LC_MESSAGES/messages.po
+++ b/translations/en/LC_MESSAGES/messages.po
@@ -303,3 +303,6 @@ msgstr "Contact us"
 
 msgid "footer.copyright"
 msgstr "Copyright &copy; IFCA - CSIC - HUMV"
+
+msgid "footer.delete-profile"
+msgstr "Delete category"
